# CppMusicPlayer

./: CMakeLists.txt  README.md
include/: downloader.h  player.h  tui.h
src/: downloader.cpp  main.cpp  player.cpp  tui.cpp
